k8s/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: appkube 
spec:
  replicas: 3
  selector:
    matchLabels:
      app: appkube
  template:
    metadata:
      labels:
        app: appkube 
    spec:
      containers:
        - name: appkube 
          image: artemrafikov2.azurecr.io/bootcampapp:latest
          imagePullPolicy: "Always"
          ports:
          - containerPort: 8080
            protocol: TCP
