k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: appkube
  labels: 
    app: appkube
spec:
    type: ClusterIP
    ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    selector:
        app: appkube
