k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bootcampapp-ingress
  annotations:
     kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  -  http:
      paths:
        - backend:
            service:
              name: appkube
              port:
                number: 80
          path: /
          pathType: Prefix
